tests/fixtures/invalid/none_bitxor_bool.py
# Cannot bitwise XOR None and Bool
x: None = None ^ True
